--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 MONGO_URL="mongodb://localhost:27017"
-DB_NAME="test_database"
+DB_NAME="supportgenie_database"
 CORS_ORIGINS="*"
-EMERGENT_LLM_KEY=sk-emergent-cF8B7959b669384D54
+OPENAI_API_KEY=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
