--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,1 @@
-REACT_APP_BACKEND_URL=https://smartsupport-3.preview.emergentagent.com
-WDS_SOCKET_PORT=443
+REACT_APP_BACKEND_URL=http://localhost:8000
