--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,1 +1,78 @@
+version: '3.8'
+services:
+  mongodb:
+    image: mongo:7.0
+    container_name: supportgenie-mongo
+    restart: unless-stopped
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: admin
+      MONGO_INITDB_ROOT_PASSWORD: supportgenie123
+      MONGO_INITDB_DATABASE: supportgenie_database
+    ports:
+      - "27017:27017"
+    volumes:
+      - mongodb_data:/data/db
+      - ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
+    networks:
+      - supportgenie-network
 
+  backend:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    container_name: supportgenie-backend
+    restart: unless-stopped
+    environment:
+      - MONGO_URL=mongodb://admin:supportgenie123@mongodb:27017/supportgenie_database?authSource=admin
+      - DB_NAME=supportgenie_database
+      - CORS_ORIGINS=http://localhost:3000,https://your-domain.com
+      - OPENAI_API_KEY=${OPENAI_API_KEY}
+    ports:
+      - "8000:8000"
+    depends_on:
+      - mongodb
+    volumes:
+      - ./backend:/app
+    networks:
+      - supportgenie-network
+
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    container_name: supportgenie-frontend
+    restart: unless-stopped
+    environment:
+      - REACT_APP_BACKEND_URL=http://localhost:8000
+    ports:
+      - "3000:3000"
+    depends_on:
+      - backend
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
+    networks:
+      - supportgenie-network
+
+  nginx:
+    image: nginx:alpine
+    container_name: supportgenie-nginx
+    restart: unless-stopped
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./ssl:/etc/nginx/ssl:ro
+    depends_on:
+      - frontend
+      - backend
+    networks:
+      - supportgenie-network
+
+volumes:
+  mongodb_data:
+
+networks:
+  supportgenie-network:
+    driver: bridge
